Bug 150086 - DOCX import: Lost text part of tracked insertion, resulting that every part of inserted TOC won't be rejected after we use the Reject All option.
Summary: DOCX import: Lost text part of tracked insertion, resulting that every part o...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0 target:7.4.0.2
Keywords:
: 150085 (view as bug list)
Depends on:
Blocks: DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2022-07-21 10:53 UTC by NISZ LibreOffice Team
Modified: 2022-07-26 10:12 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Example file from Word with moved TOC (16.04 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2022-07-21 10:57 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-07-21 10:53:26 UTC
Description:
When I open the attached file and reject all changes then every part of the moved TOC isn't rejected.

Steps to Reproduce:
1. Open attached file 
2. Edit -> Track Changes -> Reject All

Actual Results:
Every part of the moved TOC is not rejected. The end of Content text (the nt characters) still remain.

Expected Results:
Every part of the changes should be rejected. 


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: a4ab155ae15e9e6d4deb157634f8b86c87fcbde4
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL

Bisected with: win64-7.1 to 69edfcf789db1920273191d93fae0bc03f385b81
https://cgit.freedesktop.org/libreoffice/core/commit/?id=69edfcf789db1920273191d93fae0bc03f385b81

author	Miklos Vajna <vmiklos@collabora.com>	2020-11-06 16:33:10 +0100
committer	Miklos Vajna <vmiklos@collabora.com>	2020-11-06 17:58:04 +0100
commit 69edfcf789db1920273191d93fae0bc03f385b81 (patch)

DOCX import: fix assertion failure when redline ends right before a ToC
Comment 1 NISZ LibreOffice Team 2022-07-21 10:57:59 UTC
Created attachment 181359 [details]
Example file from Word with moved TOC
Comment 2 NISZ LibreOffice Team 2022-07-21 11:08:28 UTC
Correction:

Actual Results:
Every part of the moved TOC is not rejected. The end of Content text (the "k" character) still remain.
Comment 3 László Németh 2022-07-21 16:38:25 UTC
*** Bug 150085 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2022-07-22 08:58:35 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7335d912de04eaa279dc805ee0ed5be0fcac5326

tdf#150086 DOCX import: fix ToC redline with lost content

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 NISZ LibreOffice Team 2022-07-26 08:48:06 UTC
Verified in:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 5df1bb4b1b222be00d25097660c4ee33542896ea
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 6 Commit Notification 2022-07-26 10:12:42 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/3c32bc911189c55247b4c1f425a1f8dc86420eb4

tdf#150086 DOCX import: fix ToC redline with lost content

It will be available in 7.4.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.