tdf#150086 DOCX import: fix ToC redline with lost content

Inserted Table of Contents lost its redline partially,
e.g. the redline contained only "Conte" instead of "Content".

Regression from commit 69edfcf789db1920273191d93fae0bc03f385b81
"DOCX import: fix assertion failure when redline ends right before a ToC".

Note: it seems, it's enough to limit the original fix for
delete redlines, because that was the main target of the
interoperability fix.

Change-Id: I617fa855aa8e194a33caa419d2d73e76588f4bd5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/137308
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>