sw/qa/core/docnode/docnode.cxx
@@ -10,6 +10,7 @@
 #include <swmodeltestbase.hxx>
 
 #include <IDocumentRedlineAccess.hxx>
+#include <redline.hxx>
 #include <doc.hxx>
 #include <docary.hxx>
 
@@ -29,6 +30,20 @@ CPPUNIT_TEST_FIXTURE(Test, testRedlineEndsBeforeToC)
     // Without the accompanying fix in place, this test would have resulted in an assertion failure
     // in InsertCnt_(), because the start of the section was hidden, but not its end.
     CPPUNIT_ASSERT_EQUAL(static_cast<SwRedlineTable::size_type>(2), rTable.size());
+
+    // The redline contained the newline, too
+    CPPUNIT_ASSERT_EQUAL(OUString("<add-table-of-content>"), rTable[0]->GetText());
+}
+
+CPPUNIT_TEST_FIXTURE(Test, testTdf150086)
+{
+    // Load a document where an insert redline ends right before a ToC
+    SwDoc* pDoc = createSwDoc(DATA_DIRECTORY, "tdf150086.docx");
+    const SwRedlineTable& rTable = pDoc->getIDocumentRedlineAccess().GetRedlineTable();
+    CPPUNIT_ASSERT_EQUAL(static_cast<SwRedlineTable::size_type>(9), rTable.size());
+
+    // This was "Conte" (stripped redline)
+    CPPUNIT_ASSERT_EQUAL(OUString("Content"), rTable[6]->GetText());
 }
 
 CPPUNIT_PLUGIN_IMPLEMENT();
